<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkYellow"
    tools:context="com.studio.sameer.myapplication.Help_page">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    card_view:cardCornerRadius="4dp"
                    tools:layout_constraintLeft_creator="1"
                    tools:layout_constraintRight_creator="1"
                    tools:layout_constraintTop_creator="1">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:padding="12dp">

                        <ImageView
                            android:id="@+id/applogo"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_marginRight="5dp"
                            android:src="@drawable/cclogo3"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true" />

                        <TextView
                            android:id="@+id/appTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_name"
                            android:textSize="25sp"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/applogo"
                            android:layout_toEndOf="@+id/applogo" />



                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    card_view:cardCornerRadius="4dp"
                    tools:layout_constraintLeft_creator="1"
                    tools:layout_constraintRight_creator="1"
                    tools:layout_constraintTop_creator="1">

                    <LinearLayout
                        android:id="@+id/allCurrencySectionDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/allCurrency"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="In this section you can view all the currencies, pick any currency by clicking the drop-down menu to view the complete list of currencies available. Once you select the currency, it will automatically load the latest currency rate."
                            android:textColor="@color/lightYellow"
                            android:textSize="18sp" />

                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    card_view:cardCornerRadius="4dp"
                    tools:layout_constraintLeft_creator="1"
                    tools:layout_constraintRight_creator="1"
                    tools:layout_constraintTop_creator="1">
                    <LinearLayout
                        android:id="@+id/yourCurrencySectionDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/yourCurrency"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="In this section, you can view list of currency, you can swipe through the list. Currency that contains in the list are your recently used currencies (last 7 currencies), this list will be updated automatically based on what currency you check."
                            android:textColor="@color/lightYellow"
                            android:textSize="18sp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    card_view:cardCornerRadius="4dp"
                    tools:layout_constraintLeft_creator="1"
                    tools:layout_constraintRight_creator="1"
                    tools:layout_constraintTop_creator="1">
                    <LinearLayout
                        android:id="@+id/currencyConverterSectionDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/currencyConverter"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="In this section, you can compare the rates between different currency in real time, main functionality is as soon as you enter a digit it will automatically calculate and view the data without needing to click or anything else. "
                            android:textColor="@color/lightYellow"
                            android:textSize="18sp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
        </ScrollView>






    </LinearLayout>
</android.support.constraint.ConstraintLayout>
